--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,4 @@
 theme: jekyll-theme-minimal
-title: Sample Map Website
-description: This website demonstrates how to easily publish and display an interactive map made with Folium. It features some hot spots around Ithaca, NY.
-logo: Taughannock.jpg
-#You can also add a logo from an image URL, as below
-#logo: https://www.lawschool.cornell.edu/_cs_apps/pt_photo_gallery/uploads/mainphotogallery/fullsizeimage/Photogallery_Ithacapage_8.png
+title: China’s Urban Precipitation IDF Curves Considering Climate Change Impacts
+description: This website demonstrates the precipitation intensity-duration-frequency curves averaged over China's urban area of 196 cities under past and future climates.
 
